Fix drop modal spacings once more

--- a/frontend/src/app/shared/components/project-include/project-include.component.sass
+++ b/frontend/src/app/shared/components/project-include/project-include.component.sass
@@ -10,7 +10,7 @@
     display: flex
     justify-content: space-between
     align-items: center
-    margin: $spot-spacing-0_5
+    margin: $spot-spacing-1
 
   &--title
     margin: 0
